deploy: f40b595af8f8bb7879490874441957aaf769c77d

--- a/head/overview/index.html
+++ b/head/overview/index.html
@@ -269,7 +269,9 @@
       </h1>
     <hr />
 
-<p><img src="/firefly/head/images/firefly_functionality_overview.png" alt="Hyperledger FireFly features" /></p>
+<p><img src="/firefly/head/images/understanding_firefly1.png" alt="Hyperledger FireFly features" /></p>
+
+<p>In this section we’ll go over what FireFly is, the different modes, and why you should use FireFly. For a more technical discussion check out our <a href="../reference/">Reference</a> and <a href="../architecture/">Architecture</a> sections.</p>
 
         
 
