--- a/head/index.html
+++ b/head/index.html
@@ -271,7 +271,7 @@
 
 <p>Hyperledger FireFly is an open source Supernode, a complete stack for enterprises to build and scale secure Web3 applications. It is a project contributed by Kaleido and currently in the incubation phase for Hyperledger projects.</p>
 
-<p>The easiest way to understand a FireFly Supernode is to think of it like a toolbox. Within the toolbox there are two different sets of tools. One set of tools helps you connect to the Web3 world and the other set allows you to interact with multi-party systems. In FireFly language, these are referred to as <a href="./overview/firefly_modes/gateway_mode.html">Web3 Gateway Mode</a> and <a href="./overview/firefly_modes/multiparty_mode.html">Multiparty Mode</a>.</p>
+<p>The easiest way to understand a FireFly Supernode is to think of it like a toolbox. Connect your existing apps and/or back office systems to the toolbox and within it there are two different sets of tools. One set of tools helps you connect to the Web3 world and the other set allows you to interact with multi-party systems. In FireFly language, these are referred to as <a href="./overview/firefly_modes/gateway_mode.html">Web3 Gateway Mode</a> and <a href="./overview/firefly_modes/multiparty_mode.html">Multiparty Mode</a>.</p>
 
 <p>A FireFly Supernode simplifies the development process. Instead of building and maintaining the “plumbing’ or “middleware” yourself, a Supernode comes with pre-built solutions. These solutions include APIs, connector plugins, an orchestration layer, and user tools. Head to the Understanding FireFly section for more details.</p>
 
